# cuttlebone

./: .gitignore  BlobState.hpp  CMakeLists.txt  NOTES.md  README.md  TODO.md  al_AppWith.hpp  al_BroadcastOmniApp.hpp  copy_app_with  make_link  test.cpp  toolchain-x64.cmake  toolchain.cmake  use_broadcast_app.cpp
Cuttlebone/: App.hpp  AppLoop.hpp  Broadcaster.hpp  Configuration.hpp  Cuttlebone.hpp  FileWatcher.hpp  Help.hpp  Log.hpp  Packet.hpp  Queue.hpp  Receiver.hpp  Selector.hpp  Stats.hpp  Time.hpp  Timer.hpp  al_BroadcastOmniApp.hpp
Framework/: App.hpp  Broadcaster.hpp  Checksum.hpp  Configuration.hpp  HostRole.hpp  Log.hpp  Packet.hpp  Queue.hpp  Receiver.hpp  Selector.hpp  Time.hpp  Timer.hpp  al_BroadcastOmniApp.hpp
al/AppWith/: README.md
alloSystemExample/: README.md  makeLinks.pl  use_broadcast_app.cpp
broadcast/: CMakeLists.txt  README.md
broadcast/Framework/: Broadcaster.hpp  Checksum.hpp  HostRole.hpp  Selector.hpp  Stuff.hpp  Timer.hpp
broadcast/test/: app.cpp  broadcast.cpp  receive.cpp  select.cpp  selector.cpp  sphere.cpp  test_sphere.cpp  timer.cpp
broken/: laptop_test.cpp  sphere_test.cpp
cmake/toolchains/: ky.pi.osx  toolchain.cmake
deprecated/: al_BroadcastOmniApp.hpp  app.cpp  app3.cpp  configuration.cpp
deprecated/alloSystemExample/: makeReady.pl  use_broadcast_app.cpp
example/: app.cpp  both.cpp  log.cpp  sphere_test.cpp  state_distribution.cpp  use_broadcast_app.cpp
posix_udp_broadcast_experiments/: CMakeLists.txt  Stuff.hpp  app.cpp  broadcast.cpp  receive.cpp  selector.cpp  send.cpp  sha1.cpp  test_sphere.cpp
scratch/: foo.cpp  interruption.cpp  log.cpp  recvmsg.cpp  script.cpp  sendto.cpp  thread_priority.cpp
scratch/c11/: Makefile  main.c  queue.c  queue.h  stdatomic.h
scratch/file-watcher/: FileWatcher.hpp  FileWatcherLinux.cpp  FileWatcherMacos.cpp  FileWatcherMacos.mm  Makefile  Makefile.linux
scratch/osc/: Makefile  caster.cpp  catcher.cpp  common.hpp
scripts/: linux_settings
source/: FileWatcherLinux.cpp  FileWatcherMacos.cpp  TimerLinux.cpp  TimerMacos.cpp
source/linux/: FileWatcherLinux.cpp  TimerLinux.cpp
source/macos/: FileWatcherMacos.cpp
test/: README.md  app.cpp  apploop.cpp  broadcast.cpp  broadcaster.cpp  configuration.cpp  file-watcher.cpp  file_watcher.cpp  find_maximum_sendto.cpp  hostRole.cpp  interruption.cpp  log.cpp  maker.cpp  maker_app.cpp  now.cpp  packet.cpp  pusher.cpp  queue.cpp  receive.cpp  receiver.cpp  select.cpp  selector.cpp  subscriber_manual_polling.cpp  taker-manual.cpp  taker.cpp  taker_app.cpp  time.cpp  timer.cpp
tools/: copy  deploy
