cmake_minimum_required(VERSION 2.8)
project(broadcast)

set(CMAKE_CXX_FLAGS                "-Wall -std=c++11")
set(CMAKE_CXX_FLAGS_DEBUG          "-O0 -g")
set(CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules")

find_package(Crypto REQUIRED)
include_directories(${CRYPTO_INCLUDE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_executable(broadcast test/broadcast.cpp)
target_link_libraries(broadcast ${CRYPTO_LIBRARIES})
if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  target_link_libraries(broadcast -lrt)
  target_link_libraries(broadcast -lpthread)
endif()

add_executable(select test/select.cpp)
target_link_libraries(select ${CRYPTO_LIBRARIES})
if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  target_link_libraries(select -lrt)
  target_link_libraries(select -lpthread)
endif()

add_executable(app test/app.cpp)
target_link_libraries(app ${CRYPTO_LIBRARIES})
if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  target_link_libraries(app -lrt)
  target_link_libraries(app -lpthread)
endif()
