cmake_minimum_required(VERSION 2.8)
project(broadcast)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules")
add_executable(app app.cpp)
find_package(Crypto REQUIRED)
include_directories(${CRYPTO_INCLUDE_DIR})
add_executable(test_sphere test_sphere.cpp)
target_link_libraries(test_sphere ${CRYPTO_LIBRARIES})
